unpackaged/main/default/objects/System_Exception_Log__c/System_Exception_Log__c.object-meta.xml
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <label>System Exception Log</label>
    <nameField>
        <label>Process Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>System Exception Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>