unpackaged/main/default/objects/System_Exception_Log__c/fields/Dml_Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>Dml_Exception_Type__c</fullName>
    <description>This field describes the exception type for DML operation exceptions. This field will  be populated with the Exception.getDmlType() method for APEX exceptions where the exception type is DMLException.</description>
    <label>Dml Exception Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>