unpackaged/main/default/objects/System_Exception_Log__c/fields/EntityInfoSystemExceptionLogs__c.field-meta.xml
<CustomField>
    <fullName>EntityInfoSystemExceptionLogs__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GIdentifyEntityInformation</label>
    <referenceTo>GIdentifyEntityInformation__c</referenceTo>
    <relationshipLabel>System Exception Logs</relationshipLabel>
    <relationshipName>System_Exception_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>