unpackaged/main/default/objects/System_Exception_Log__c/fields/Exception_Level__c.field-meta.xml
<CustomField>
    <fullName>Exception_Level__c</fullName>
    <description>This field describes the error level which is used to classify the severity of the exception error.</description>
    <label>Exception Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CRITICAL</fullName>
                <default>true</default>
                <label>CRITICAL</label>
            </value>
            <value>
                <fullName>INFO</fullName>
            </value>
            <value>
                <fullName>WARNING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>