unpackaged/main/default/objects/System_Exception_Log__c/fields/Exception_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Exception_Line_Number__c</fullName>
    <description>This field describes the line number reference to the APEX code where the exception occurred. This field will most likely be populated with the Exception.getLineNumber() method for APEX exceptions.</description>
    <label>Exception Line Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>