unpackaged/main/default/objects/System_Exception_Log__c/fields/Exception_Message__c.field-meta.xml
<CustomField>
    <fullName>Exception_Message__c</fullName>
    <description>This field describes the message of the exception. This field will most likely be populated with the Exception.getMessage() method for APEX exceptions. For non-APEX calls, the cause of error should be described.</description>
    <label>Exception Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>