unpackaged/main/default/objects/System_Exception_Log__c/fields/Exception_Run_As_User__c.field-meta.xml
<CustomField>
    <fullName>Exception_Run_As_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains the lookup to the User that was accessing the application when the exception occurred</description>
    <label>Exception Run As User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>System_Exception_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>