unpackaged/main/default/objects/System_Exception_Log__c/fields/Exception_Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Exception_Stack_Trace__c</fullName>
    <description>This field displays the stack trace as a string. This field will most likely be populated with the Exception.getStackTraceString() method for APEX exceptions.</description>
    <label>Exception Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>