unpackaged/main/default/objects/System_Exception_Log__c/fields/Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>Exception_Type__c</fullName>
    <description>This field describes the type of the exception. This will most likely contain the Exception.getTypeName() method for APEX exceptions</description>
    <label>Exception Type</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>