unpackaged/main/default/objects/System_Exception_Log__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>This field describes the name of the object that was being referenced when the exception occurred.</description>
    <label>Object Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>