unpackaged/main/default/objects/System_Exception_Log__c/fields/Object_Reference__c.field-meta.xml
<CustomField>
    <fullName>Object_Reference__c</fullName>
    <description>This field contains the Id of the object that was referenced when the error occurred,</description>
    <label>Object Reference</label>
    <length>18</length>
    <type>Text</type>
</CustomField>