unpackaged/main/default/objects/System_Exception_Log__c/fields/Source_Application__c.field-meta.xml
<CustomField>
    <fullName>Source_Application__c</fullName>
    <description>This field describes the SFDC or external application where the exception occurred</description>
    <label>Source Application</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>