unpackaged/main/default/objects/System_Exception_Log__c/fields/Support_Data__c.field-meta.xml
<CustomField>
    <fullName>Support_Data__c</fullName>
    <description>This field contains any supporting data to determine the cause of the exception.</description>
    <label>Support Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>