unpackaged/main/default/objects/System_Exception_Log__c/fields/SystemExceptionLogs__c.field-meta.xml
<CustomField>
    <fullName>SystemExceptionLogs__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Value+</label>
    <referenceTo>ValuePlus__c</referenceTo>
    <relationshipLabel>System Exception Logs</relationshipLabel>
    <relationshipName>System_Exception_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>